// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<button
  className="w-btn h-btn text-center text-gray-700 font-semibold bg-white border-white focus:outline-none hover:bg-gray-200 disabled:bg-gray-200"
/>
`;

exports[`should render disabled when disabled prop passed 1`] = `
<button
  className="w-btn h-btn text-center text-gray-700 font-semibold bg-white border-white focus:outline-none hover:bg-gray-200 disabled:bg-gray-200"
  disabled={true}
/>
`;

exports[`should render with text 1`] = `
<button
  className="w-btn h-btn text-center text-gray-700 font-semibold bg-white border-white focus:outline-none hover:bg-gray-200 disabled:bg-gray-200"
>
  name
</button>
`;
